NEXUS-47101 zscaler quota (#13630)